updated hrefs for redirect and remove email from about me page

--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About Me</a></li>
+            <li><a href="index">Home</a></li>
+            <li class="active"><a href="about">About Me</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
@@ -65,7 +65,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg"></a>
+      <a class="navbar-brand" href="index"><img src="assets/img/logo.jpg"></a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -85,11 +85,7 @@
             <p class="mb-0" style="font-family: Arial, Helvetica, sans-serif; font-size: 19px;" >Hi! I’m Phoebe and… welcome, I suppose! Photography has always been my passion and this
 				website is my little space to share that passion with as many people as I can.</p>
           </div>
-		  <div class="col-md-6" data-aos="fade-up">
-
-            <h4>Email Address</h4>
-            <p class="mb-0" style="font-family: Arial, Helvetica, sans-serif; font-size: 19px; align:right" >phoebedorman@yahoo.co.uk</p>
-          </div>
+		  
 
         </div>
 
