--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
+            <li class="active"><a href="index">Home</a></li>
+            <li><a href="about">About Me</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
@@ -67,7 +67,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg"></a>
+      <a class="navbar-brand" href="index"><img src="assets/img/logo.jpg"></a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
