--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,9 @@
         <div class="col-md-2">
           <ul class="custom-menu">
             <li><a href="index">Home</a></li>
-            <li class="active"><a href="about">About Me</a></li>
+            <li><a href="about">About Me</a></li>
 			<li><a href="blogs">Blog</a></li>
-			<li><a href="contact">Contact</a></li>
+			<li class="active"><a href="contact">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
