--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
           <ul class="custom-menu">
             <li class="active"><a href="index">Home</a></li>
             <li><a href="about">About Me</a></li>
+			<li><a href="blogs">Blog</a></li>
+			<li><a href="contact">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
